--- a/set8/set8.ipynb
+++ b/set8/set8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -168,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "k1,k2=1.0,5.0\n",
-    "Cs = [.001,.01,.1,1]\n",
+    "Cs = [.0001,.001,.01,.1,1]\n",
     "svs = []\n",
     "e_ins = []\n",
     "e_outs = []\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -268,13 +268,14 @@
     {
      "data": {
       "text/plain": [
-       "[(0.004484304932735426, 0.001),\n",
+       "[(0.008968609865470852, 0.0001),\n",
+       " (0.004484304932735426, 0.001),\n",
        " (0.004484304932735426, 0.01),\n",
        " (0.004484304932735426, 0.1),\n",
        " (0.0032030749519538757, 1)]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -293,13 +294,14 @@
     {
      "data": {
       "text/plain": [
-       "[(0.01650943396226415, 0.001),\n",
+       "[(0.01650943396226415, 0.0001),\n",
+       " (0.01650943396226415, 0.001),\n",
        " (0.018867924528301886, 0.01),\n",
        " (0.018867924528301886, 0.1),\n",
        " (0.018867924528301886, 1)]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,14 +312,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(236, 0.0001), (76, 0.001), (34, 0.01), (24, 0.1), (24, 1)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "k1,k2=1.0,5.0\n",
-    "Cs = [.001,.01,.1,1]\n",
+    "Cs = [.0001,.001,.01,.1,1]\n",
     "svs = []\n",
     "e_ins = []\n",
     "e_outs = []\n",
@@ -402,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -410,13 +434,14 @@
     {
      "data": {
       "text/plain": [
-       "[(0.004484304932735426, 0.001),\n",
+       "[(0.004484304932735426, 0.0001),\n",
+       " (0.004484304932735426, 0.001),\n",
        " (0.003843689942344651, 0.01),\n",
        " (0.0032030749519538757, 0.1),\n",
        " (0.0032030749519538757, 1)]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -435,13 +460,14 @@
     {
      "data": {
       "text/plain": [
-       "[(0.02122641509433962, 0.001),\n",
+       "[(0.018867924528301886, 0.0001),\n",
+       " (0.02122641509433962, 0.001),\n",
        " (0.02122641509433962, 0.01),\n",
        " (0.018867924528301886, 0.1),\n",
        " (0.02122641509433962, 1)]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,12 +478,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(26, 0.0001), (25, 0.001), (23, 0.01), (25, 0.1), (21, 1)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svs"
+   ]
   },
   {
    "cell_type": "code",
